--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ APP_SECRET=09ba3aefac89a52e0c2233721dcf0134
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://adrien:adrien@127.0.0.1:3306/pecheur?serverVersion=5.7
+DATABASE_URL=mysql://stagiaire:stagiaire@127.0.0.1:3306/pecheur?serverVersion=5.7
 
 ###< doctrine/doctrine-bundle ###
 
